package fr.univnantes.alma.model.cards;


public interface CardInterface {
    public String getDescription();
    public Object getName();
}
