package fr.univnantes.alma.model.pawns;

// Mettre tous les pions volontés dans la liste
public enum PawnName {
    BALISE, ASSIMILATION, SECOURS, VOLONTE
}
