package fr.univnantes.alma.model.players;

public class MasterPlayer {
}
