package fr.univnantes.alma.model.tokens;

public enum TokenName {
    CIBLE, CREATURE, ARTEMIA
}
