package fr.univnantes.alma.model.utlis;

public enum SurvieTitle {
    RIPOSTE, VORTEX, ESQUIVE, VOLTE_FACE
}
