package fr.univnantes.alma.model.utlis;

public enum TraqueTitle {
    ACHARNEMENT, CHAMPS_DE_FORCE, FLASHBACK, MUTATION
}
